--- a/Develop/package.json
+++ b/Develop/package.json
@@ -1,12 +1,12 @@
 {
   "name": "static-site",
   "version": "1.0.0",
-  "description": "",
+  "description": "Command-line application that dynamically generates a professional README.md file from a user's input using the Inquirer package and follows the Readme Guide",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Ahsan Rizvi",
   "license": "ISC",
   "dependencies": {
     "inquirer": "^6.3.1"
