--- a/Develop/package.json
+++ b/Develop/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Ahsan Rizvi",
+  "author": "Syed Ahsan Rizvi",
   "license": "ISC",
   "dependencies": {
     "inquirer": "^6.3.1"
